feat; add new commentaries to index file

--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,10 @@
         <h1>
             Main
         </h1>
+        <ul>
+            <li>
+                <a href="/help.html">Me ajuda</a>
+            </li>
+        </ul>
     </body>
 </html>
